# groebner

./: README.md  requirements.txt
cpp/: polynomial.h
cpp/exp3_1_openmp/: CMakeLists.txt  hom_speedup.cpp
cpp/exp3_2_cuda/: CMakeLists.txt  f4_cuda.cu
cpp/exp6_l2_pipeline/: CMakeLists.txt  README.md  l2_pipeline.cu  setup_matilda.sh  slurm_cpu_only.sh  slurm_gpu.sh  weighted_poly.h
cpp/exp6_pipeline/: CMakeLists.txt  PLOTS_GENERATED.txt  PLOT_SUMMARY.md  collect_all_results.py  generate_paper_plots.py  gmp_wrapper.h  l2_pipeline.cu  l3_compute_hpc.py  l3_pipeline.cu  sequential_ansatz_l2.py  sequential_ansatz_l3.py  slurm_baseline.sh  slurm_cpu_only.sh  slurm_gpu.sh  slurm_l2_baselines.sh  slurm_l3_baseline.sh  slurm_l3_compute.sh  slurm_l3_gpu.sh  slurm_l3_sequential.sh  sympy_baseline.py  sympy_baseline_hpc.py  sympy_baseline_l2.py  sympy_baseline_l3.py  weighted_poly.h
python/: exp1_1_toy_cases.py  exp1_2_homogeneity_check.py  exp2_1_phase_timing.py  exp2_2_complexity_scaling.py  exp3_1_hom_speedup.py  exp3_4_gcd_scaling.py  exp3_5_load_imbalance.py  exp4_full_pipeline.py  exp5_integrated_benchmark.py  plot_cpp_results.py  run_all.py
python/core/: groebner.py  homogenization.py  pipeline.py  weighted_gcd.py  weighted_projective.py
python/results/: exp1_1.json  exp1_2.json  exp2_1.csv  exp2_2.csv  exp3_1.csv  exp3_4.csv  exp3_5.csv  exp4_1.csv  exp4_2.csv  exp4_3_genus2.json  exp5_integrated.csv
results/: exp3_1_cpp.csv  exp3_2_cuda.csv  exp3_2_dense.csv  exp3_2_sparse.csv  exp3_2_spoly.csv
